--- a/Enlaces/combos.html
+++ b/Enlaces/combos.html
@@ -19,11 +19,12 @@
             </a>
             <nav>
                 <a href="acercade.html">Acerca de</a>
-                <a href="#">Television</a>
-                <a href="#">Internet</a>
+                <a href="television.html">Television</a>
+                <a href="#">Combos</a>
                 <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
+                <a href="">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -36,23 +37,65 @@
         </section>
 
         <section>
-                <div>
+                <div class="condicion-tabla">
                     <h1>Planes Sin Clausulas de Permantenica</h1>
                 </div>
                 <div class="tabla-precios">
                     <div class="mes">
-                        <h1 class="item">Basico 3 Megas</h1>
-                        <h3 class="item"><sup>$ </sup>55.000</h2>
-                        <ul class="item">
-                            <li>a</li>
-                            <li>a</li>
+                        <h1>Basico 3 Megas</h1>
+                        <img src="../img/Llanero.png" alt="">
+                        <h3><sup>$ </sup>55.000<sub>/Mes</sub></h2>
+                        <ul>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
                         </ul>
-                        <h4 class="item"><a href="">Seleccionar Plan</a></h3>
+                        <a href="" class="btn">Seleccionar Plan</a>
                     </div>
-                    <div class="mes"></div>
-                    <div class="mes"></div>
-                    <div class="mes"></div>
-                    <div class="mes"></div>
+                    <div class="mes">
+                        <h1>Hogar 5 Megas</h1>
+                        <img src="../img/hat.png" alt="">
+                        <h3><sup>$ </sup>65.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
+                    <div class="mes">
+                        <h1>Familia 7 Megas</h1>
+                        <img src="../img/cowboy.png" alt="">
+                        <h3><sup>$ </sup>75.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
+                    <div class="mes">
+                        <h1>Estudiantes 9 Megas</h1>
+                        <img src="../img/Sheriff.png" alt="">
+                        <h3><sup>$ </sup>85.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
+                    <div class="mes">
+                        <h1>Trabajadores 12 Megas</h1>
+                        <img src="../img/Botas.png" alt="">
+                        <h3><sup>$ </sup>95.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                            <li><span>a</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
                 </div>
 
 <!--             <div>
@@ -84,8 +127,8 @@
         <div class="columna columna-50">
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
-                <li><a href=""><a href="#">Television</a></li>
-                <li><a href=""><a href="#internet">Internet</a></li>
+                <li><a href=""><a href="television.html">Television</a></li>
+                <li><a href=""><a href="#">Combos</a></li>
                 <li><a href=""><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
                 <li><a href=""><a href="">Contactanos</a></li>
