--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="Enlaces/acercade.html">Acerca de</a>
                 <a href="Enlaces/television.html">Television</a>
-                <a href="#internet">Combos</a>
+                <a href="Enlaces/combos.html">Combos</a>
                 <a href="Enlaces/proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
@@ -73,7 +73,7 @@
             <ul class="menu-footer">
                 <li><a href="Enlaces/acercade.html">Acerca de</a></li>
                 <li><a href="Enlaces/television.html">Television</a></li>
-                <li><a href="">Combos</a></li>
+                <li><a href="Enlaces/combos.html">Combos</a></li>
                 <li><a href="Enlaces/proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
                 <li><a href="">Contactanos</a></li>
@@ -83,8 +83,8 @@
             <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
                 <li><a href="">Resolucion 19012 2020</a></li>
-<!--                 <li><a href="">Link 1</a></li>
-                <li><a href="">Link 1</a></li>
+                <li><a href="">PQR</a></li>
+<!--                  <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li> -->
             </ul>
