--- a/Enlaces/acercade.html
+++ b/Enlaces/acercade.html
@@ -20,10 +20,11 @@
             <nav>
                 <a href="#acercade">Acerca de</a>
                 <a href="television.html">Television</a>
-                <a href="#">Combos</a>
+                <a href="combos.html">Combos</a>
                 <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
+                <a href="">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -67,7 +68,7 @@
             <ul class="menu-footer">
                 <li><a href="#">Acerca de</a></li>
                 <li><a href="television.html">Television</a></li>
-                <li><a href="#internet">Combos</a></li>
+                <li><a href="combos.html">Combos</a></li>
                 <li><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
                 <li><a href="">Contactanos</a></li>
@@ -77,8 +78,8 @@
             <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
                 <li><a href="">Resolucion 19012 2020</a></li>
+                <li><a href="">PQR</a></li>
 <!--                 <li><a href="">Link 1</a></li>
-                <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li> -->
             </ul>
