--- a/Enlaces/proteccion.html
+++ b/Enlaces/proteccion.html
@@ -20,10 +20,11 @@
             <nav>
                 <a href="acercade.html">Acerca de</a>
                 <a href="television.html">Television</a>
-                <a href="#">Combos</a>
+                <a href="combos.html">Combos</a>
                 <a href="#">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
+                <a href="">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -54,7 +55,7 @@
                     <ul>
                         <li><a href="https://www.google.com/maps/d/viewer?mid=1DFcnN3H5SbfTSZEQsylyrvu11q_XhRYI&ll=4.812374095130433%2C-74.35147871063967&z=20" target="_blank">Mapa Redes Fibra Óptica Propia</li>
                         <li><a href="https://www.google.com/maps/d/viewer?mid=1DFcnN3H5SbfTSZEQsylyrvu11q_XhRYI&ll=4.812374095130433%2C-74.35147871063967&z=20" target="_blank">Mapa de Cobertura</li>
-                        <li><a href="">Planes y Tarifas</li>
+                        <li><a href="combos.html">Planes y Tarifas</li>
                         <li><a href="">Términos, condiciones y garantía Wifi Extendido</li>
                         <li><a href="">Factores que limitan la navegación</li>
                         <li><a href="">Recomendaciones de seguridad</li>
@@ -93,9 +94,9 @@
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
                 <li><a href=""><a href="television.html">Television</a></li>
-                <li><a href=""><a href="#internet">Combos</a></li>
+                <li><a href=""><a href="combos.html">Combos</a></li>
                 <li><a href=""><a href="#">Proteccion al Usuario</a></li>
-                <li><a href=""><a href="">Paga tu Factura</a></li>
+                <li><a href=""><a href="combos.html">Paga tu Factura</a></li>
                 <li><a href=""><a href="">Contactanos</a></li>
             </ul>
         </div>
@@ -103,8 +104,8 @@
             <ul class="menu-footer">
                 <li><a href=""><a href="">Indicadores</a></li>
                 <li><a href=""><a href="">Resolucion 19012 2020</a></li>
-<!--                 <li><a href=""><a href="">Link 1</a></li>
-                <li><a href=""><a href="">Link 1</a></li>
+                 <li><a href=""><a href="">PQR</a></li>
+<!--                <li><a href=""><a href="">Link 1</a></li>
                 <li><a href=""><a href="">Link 1</a></li>
                 <li><a href=""><a href="">Link 1</a></li> -->
             </ul>
