--- a/Enlaces/television.html
+++ b/Enlaces/television.html
@@ -20,10 +20,11 @@
             <nav>
                 <a href="acercade.html">Acerca de</a>
                 <a href="#">Television</a>
-                <a href="#">Combos</a>
+                <a href="combos.html">Combos</a>
                 <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
+                <a href="">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -406,7 +407,7 @@
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
                 <li><a href=""><a href="#">Television</a></li>
-                <li><a href=""><a href="#internet">Combos</a></li>
+                <li><a href=""><a href="combos.html">Combos</a></li>
                 <li><a href=""><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
                 <li><a href=""><a href="">Contactanos</a></li>
@@ -416,8 +417,8 @@
             <ul class="menu-footer">
                 <li><a href=""><a href="">Indicadores</a></li>
                 <li><a href=""><a href="">Resolucion 19012 2020</a></li>
-<!--                 <li><a href=""><a href="">Link 1</a></li>
-                <li><a href=""><a href="">Link 1</a></li>
+                <li><a href=""><a href="">PQR</a></li>
+<!--                <li><a href=""><a href="">Link 1</a></li>
                 <li><a href=""><a href="">Link 1</a></li>
                 <li><a href=""><a href="">Link 1</a></li> -->
             </ul>
