--- a/Enlaces/combos.html
+++ b/Enlaces/combos.html
@@ -38,7 +38,7 @@
 
         <section>
                 <div class="condicion-tabla">
-                    <h1>Planes Sin Clausulas de Permantenica</h1>
+                    <h1>Planes Con Clausulas de Permantenica</h1>
                 </div>
                 <div class="tabla-precios">
                     <div class="mes">
@@ -46,9 +46,11 @@
                         <img src="../img/Llanero.png" alt="">
                         <h3><sup>$ </sup>55.000<sub>/Mes</sub></h2>
                         <ul>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 3 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
                     </div>
@@ -57,9 +59,11 @@
                         <img src="../img/hat.png" alt="">
                         <h3><sup>$ </sup>65.000<sub>/Mes</sub></h3>
                         <ul>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 5 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
                     </div>
@@ -68,9 +72,11 @@
                         <img src="../img/cowboy.png" alt="">
                         <h3><sup>$ </sup>75.000<sub>/Mes</sub></h3>
                         <ul>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 7 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
                     </div>
@@ -79,9 +85,11 @@
                         <img src="../img/Sheriff.png" alt="">
                         <h3><sup>$ </sup>85.000<sub>/Mes</sub></h3>
                         <ul>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 9 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
                     </div>
@@ -90,32 +98,86 @@
                         <img src="../img/Botas.png" alt="">
                         <h3><sup>$ </sup>95.000<sub>/Mes</sub></h3>
                         <ul>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
-                            <li><span>a</span></li>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 12 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
                     </div>
                 </div>
-
-<!--             <div>
-                <h1>Planes Con Clausulas de Permantenica</h1>
+<!-- Segunda tabla de Precios -->
+                <div class="condicion-tabla">
+                    <h1>Planes Sin Clausulas de Permantenica</h1>
+                </div>
                 <div class="tabla-precios">
                     <div class="mes">
-                        <h1 class="item">Basico 3 Megas</h1>
-                        <h3 class="item"><sup>$ </sup>55.000</h2>
-                        <ul class="item">
-                            <li>a</li>
-                            <li>a</li>
+                        <h1>Basico 3 Megas</h1>
+                        <img src="../img/Llanero.png" alt="">
+                        <h3><sup>$ </sup>70.000<sub>/Mes</sub></h2>
+                        <ul>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 3 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
-                        <h4 class="item">Price</h3>
+                        <a href="" class="btn">Seleccionar Plan</a>
                     </div>
-                    <div class="mes"></div>
-                    <div class="mes"></div>
-                    <div class="mes"></div>
-                    <div class="mes"></div>
+                    <div class="mes">
+                        <h1>Hogar 5 Megas</h1>
+                        <img src="../img/hat.png" alt="">
+                        <h3><sup>$ </sup>80.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 5 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
+                    <div class="mes">
+                        <h1>Familia 7 Megas</h1>
+                        <img src="../img/cowboy.png" alt="">
+                        <h3><sup>$ </sup>90.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 7 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
+                    <div class="mes">
+                        <h1>Estudiantes 9 Megas</h1>
+                        <img src="../img/Sheriff.png" alt="">
+                        <h3><sup>$ </sup>100.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 9 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
+                    <div class="mes">
+                        <h1>Trabajadores 12 Megas</h1>
+                        <img src="../img/Botas.png" alt="">
+                        <h3><sup>$ </sup>110.000<sub>/Mes</sub></h3>
+                        <ul>
+                            <li><span>Television de 88 Canales</span></li>
+                            <li><span>Internet para hasta 12 Dispositivos</span></li>
+                            <li><span>Conexion a un Televisor</span></li>
+                            <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
+                        </ul>
+                        <a href="" class="btn">Seleccionar Plan</a>
+                    </div>
                 </div>
-            </div> -->
         </section>
 
         <!-- Imagen de Covid19 -->
