--- a/Enlaces/television.html
+++ b/Enlaces/television.html
@@ -31,6 +31,24 @@
     </header>
     <main>
         <section>
+            <div class="condicion-tabla divicion">
+                <h1>Planes Con Clausulas de Permantenica</h1>
+            </div>
+            <div class="tabla-precios">
+                <div class="mes">
+                    <h1>Television Basica</h1>
+                    <img src="../img/oldTV.png" alt="">
+                    <h3><sup>$ </sup>25.000<sub>/Mes</sub></h2>
+                    <ul>
+                        <li><span>television de 88 Canales</span></li>
+                        <li><span>Conexion A un Televisor</span></li>
+                        <li><span>Programacion del Televisor con los Canales</span></li>
+                        <li><span>Punto Adicional a $15.000 cada Uno</span></li>
+                    </ul>
+                    <a href="" class="btn">Seleccionar Plan</a>
+                </div>
+        </section>
+        <section>
             <div class="titulo">
                 <h2>Nuestra Programacion</h2>
             </div>
