--- a/Enlaces/combos.html
+++ b/Enlaces/combos.html
@@ -50,6 +50,7 @@
                             <li><span>Internet para hasta 3 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $30.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -63,6 +64,7 @@
                             <li><span>Internet para hasta 5 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $30.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -76,6 +78,7 @@
                             <li><span>Internet para hasta 7 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $30.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -89,6 +92,7 @@
                             <li><span>Internet para hasta 9 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $30.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -102,6 +106,7 @@
                             <li><span>Internet para hasta 12 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $30.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -121,6 +126,7 @@
                             <li><span>Internet para hasta 3 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $80.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -134,6 +140,7 @@
                             <li><span>Internet para hasta 5 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $80.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -147,6 +154,7 @@
                             <li><span>Internet para hasta 7 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $80.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -160,6 +168,7 @@
                             <li><span>Internet para hasta 9 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $80.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
@@ -173,13 +182,13 @@
                             <li><span>Internet para hasta 12 Dispositivos</span></li>
                             <li><span>Conexion a un Televisor</span></li>
                             <li><span>Punto Adicional de     TV a $15.000</span></li>
+                            <li><span>Costo de Instalacion $80.000</span></li>
                             <li><span class="nota">La cantidad de Dispositivos acá planteados se suponen cada dispositivo consumiendo 1 Mbps este consumo puede variar según el uso del dispositivo, la empresa no responde por cualquier case de modificación que no se autorizada por la misma o si esto involucra funcionamiento de acometida</span></li>
                         </ul>
                         <a href="" class="btn">Seleccionar Plan</a>
                     </div>
                 </div>
         </section>
-
         <!-- Imagen de Covid19 -->
         <section class="crc">
             <img src="../img/bamnnercrcabril2020.jpg" alt="">
