--- a/Enlaces/acercade.html
+++ b/Enlaces/acercade.html
@@ -15,16 +15,16 @@
     <header>
         <div class="contenedor">
             <a href="../index.html">
-                <img src="../img/Logo.svg" alt="Imporiente" class="imagen">
+                <img src="../img/Logo.svg" alt="Imporiente" loading="lazy" class="imagen">
             </a>
             <nav>
-                <a href="#acercade">Acerca de</a>
+                <a href="#">Acerca de</a>
                 <a href="television.html">Television</a>
                 <a href="combos.html">Combos</a>
                 <a href="proteccion.html">Proteccion al Usuario</a>
-                <a href="">Paga tu Factura</a>
-                <a href="">Contactanos</a>
-                <a href="">PQR</a>
+                <a href="#">Paga tu Factura</a>
+                <a href="Contactenos.php">Contactanos</a>
+                <a href="pqr.php">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -32,9 +32,9 @@
     <main>
         <section class="slider-contenedor">
             <ul class="slider">
-                <li><img src="../img/slider/1_1.png" alt=""></li>
-                <li><img src="../img/slider/2_1.png" alt=""></li>
-                <li><img src="../img/slider/3_1.png" alt=""></li>
+                <li><img src="../img/slider/1_1.png" loading="lazy" alt=""></li>
+                <li><img src="../img/slider/2_1.png" loading="lazy" alt=""></li>
+                <li><img src="../img/slider/3_1.png" loading="lazy" alt=""></li>
             </ul>
         </section>
         <section class="empresa">
@@ -60,7 +60,7 @@
         </section>
         <!-- Imagen de Covid19 -->
         <section class="crc">
-            <img src="../img/bamnnercrcabril2020.jpg" alt="">
+            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="../img/bamnnercrcabril2020.jpg" loading="lazy" alt=""></a>
         </section>
     </main>
     <footer>    
@@ -70,18 +70,15 @@
                 <li><a href="television.html">Television</a></li>
                 <li><a href="combos.html">Combos</a></li>
                 <li><a href="proteccion.html">Proteccion al Usuario</a></li>
-                <li><a href="">Paga tu Factura</a></li>
-                <li><a href="">Contactanos</a></li>
+                <li><a href="#">Paga tu Factura</a></li>
+                <li><a href="Contactenos.php">Contactanos</a></li>
             </ul>
         </div>
         <div class="columna columna-50 derecha">
             <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
                 <li><a href="">Resolucion 19012 2020</a></li>
-                <li><a href="">PQR</a></li>
-<!--                 <li><a href="">Link 1</a></li>
-                <li><a href="">Link 1</a></li>
-                <li><a href="">Link 1</a></li> -->
+                <li><a href="pqr.php">PQR</a></li>
             </ul>
         </div>
         <div class="columna columna-100">
