--- a/Enlaces/combos.html
+++ b/Enlaces/combos.html
@@ -15,7 +15,7 @@
     <header>
         <div class="contenedor">
             <a href="../index.html">
-                <img src="../img/Logo.svg" alt="Imporiente" class="imagen">
+                <img src="../img/Logo.svg" alt="Imporiente" loading="lazy" class="imagen">
             </a>
             <nav>
                 <a href="acercade.html">Acerca de</a>
@@ -23,8 +23,8 @@
                 <a href="#">Combos</a>
                 <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
-                <a href="">Contactanos</a>
-                <a href="">PQR</a>
+                <a href="Contactenos.php">Contactanos</a>
+                <a href="pqr.php">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -32,7 +32,7 @@
     <main>
         <section>
             <div class="banner-titulo">
-                <img src="../img/Internet.png" alt="">
+                <img src="../img/Internet.png" loading="lazy" alt="">
             </div>
         </section>
 
@@ -43,7 +43,7 @@
                 <div class="tabla-precios">
                     <div class="mes">
                         <h1>Basico 3 Megas</h1>
-                        <img src="../img/Llanero.png" alt="">
+                        <img src="../img/Llanero.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>55.000<sub>/Mes</sub></h2>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="mes">
                         <h1>Hogar 5 Megas</h1>
-                        <img src="../img/hat.png" alt="">
+                        <img src="../img/hat.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>65.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="mes">
                         <h1>Familia 7 Megas</h1>
-                        <img src="../img/cowboy.png" alt="">
+                        <img src="../img/cowboy.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>75.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="mes">
                         <h1>Estudiantes 9 Megas</h1>
-                        <img src="../img/Sheriff.png" alt="">
+                        <img src="../img/Sheriff.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>85.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="mes">
                         <h1>Trabajadores 12 Megas</h1>
-                        <img src="../img/Botas.png" alt="">
+                        <img src="../img/Botas.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>95.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -119,7 +119,7 @@
                 <div class="tabla-precios">
                     <div class="mes">
                         <h1>Basico 3 Megas</h1>
-                        <img src="../img/Llanero.png" alt="">
+                        <img src="../img/Llanero.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>70.000<sub>/Mes</sub></h2>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="mes">
                         <h1>Hogar 5 Megas</h1>
-                        <img src="../img/hat.png" alt="">
+                        <img src="../img/hat.png"  loading="lazy" alt="">
                         <h3><sup>$ </sup>80.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="mes">
                         <h1>Familia 7 Megas</h1>
-                        <img src="../img/cowboy.png" alt="">
+                        <img src="../img/cowboy.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>90.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="mes">
                         <h1>Estudiantes 9 Megas</h1>
-                        <img src="../img/Sheriff.png" alt="">
+                        <img src="../img/Sheriff.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>100.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -175,7 +175,7 @@
                     </div>
                     <div class="mes">
                         <h1>Trabajadores 12 Megas</h1>
-                        <img src="../img/Botas.png" alt="">
+                        <img src="../img/Botas.png" loading="lazy" alt="">
                         <h3><sup>$ </sup>110.000<sub>/Mes</sub></h3>
                         <ul>
                             <li><span>Television de 88 Canales</span></li>
@@ -191,28 +191,25 @@
         </section>
         <!-- Imagen de Covid19 -->
         <section class="crc">
-            <img src="../img/bamnnercrcabril2020.jpg" alt="">
+            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="../img/bamnnercrcabril2020.jpg" loading="lazy" alt=""></a>
         </section>
     </main>
     <footer>    
         <div class="columna columna-50">
             <ul class="menu-footer">
-                <li><a href=""><a href="acercade.html">Acerca de</a></li>
-                <li><a href=""><a href="television.html">Television</a></li>
-                <li><a href=""><a href="#">Combos</a></li>
-                <li><a href=""><a href="proteccion.html">Proteccion al Usuario</a></li>
-                <li><a href=""><a href="">Paga tu Factura</a></li>
-                <li><a href=""><a href="">Contactanos</a></li>
+                <li><a href="acercade.html">Acerca de</a></li>
+                <li><a href="television.html">Television</a></li>
+                <li><a href="#">Combos</a></li>
+                <li><a href="proteccion.html">Proteccion al Usuario</a></li>
+                <li><a href="#">Paga tu Factura</a></li>
+                <li><a href="Contactenos.php">Contactanos</a></li>
             </ul>
         </div>
         <div class="columna columna-50 derecha">
             <ul class="menu-footer">
-                <li><a href=""><a href="">Indicadores</a></li>
-                <li><a href=""><a href="">Resolucion 19012 2020</a></li>
-                <li><a href=""><a href="">PQR</a></li>
-<!--                 <li><a href=""><a href="">Link 1</a></li>
-                <li><a href=""><a href="">Link 1</a></li>
-                <li><a href=""><a href="">Link 1</a></li> -->
+                <li><a href="">Indicadores</a></li>
+                <li><a href="">Resolucion 19012 2020</a></li>
+                <li><a href="pqr.php">PQR</a></li>
             </ul>
         </div>
         <div class="columna columna-100">
