--- a/Enlaces/proteccion.html
+++ b/Enlaces/proteccion.html
@@ -15,16 +15,16 @@
     <header>
         <div class="contenedor">
             <a href="../index.html">
-                <img src="../img/Logo.svg" alt="Imporiente" class="imagen">
+                <img src="../img/Logo.svg" alt="Imporiente" loading="lazy" class="imagen">
             </a>
             <nav>
                 <a href="acercade.html">Acerca de</a>
                 <a href="television.html">Television</a>
                 <a href="combos.html">Combos</a>
                 <a href="#">Proteccion al Usuario</a>
-                <a href="">Paga tu Factura</a>
-                <a href="">Contactanos</a>
-                <a href="">PQR</a>
+                <a href="#">Paga tu Factura</a>
+                <a href="Contactenos.php">Contactanos</a>
+                <a href="pqr.php">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -33,7 +33,7 @@
         <section>
             <div class="proteccion">
                 <h2>Regimen de Proteccion al Usuario y Normativa</h2>
-                <img src="../img/proteccion.png" alt="">
+                <img src="../img/proteccion.png" loading="lazy" alt="">
             </div>
         </section>
         <section>
@@ -53,10 +53,10 @@
                 </div>
                 <div class="columna-33">
                     <ul>
-                        <li><a href="https://www.google.com/maps/d/viewer?mid=1DFcnN3H5SbfTSZEQsylyrvu11q_XhRYI&ll=4.812374095130433%2C-74.35147871063967&z=20" target="_blank">Mapa Redes Fibra Óptica Propia</li>
-                        <li><a href="https://www.google.com/maps/d/viewer?mid=1DFcnN3H5SbfTSZEQsylyrvu11q_XhRYI&ll=4.812374095130433%2C-74.35147871063967&z=20" target="_blank">Mapa de Cobertura</li>
+                        <li><a href="https://www.google.com/maps/d/edit?mid=1gLGbxKiMrbnt_qgKGIpqEshOgkSp4oL-&usp=sharing" target="_blank">Mapa Redes Fibra Óptica Propia</li>
+                        <li><a href="https://www.google.com/maps/d/edit?mid=16DN1-0xResbJDSP2nrVgDV9EQa-ZDvRh&usp=sharing" target="_blank">Mapa de Cobertura</li>
                         <li><a href="combos.html">Planes y Tarifas</li>
-                        <li><a href="">Términos, condiciones y garantía Wifi Extendido</li>
+                        <!-- <li><a href="">Términos, condiciones y garantía Wifi Extendido</li> -->
                         <li><a href="">Factores que limitan la navegación</li>
                         <li><a href="">Recomendaciones de seguridad</li>
                         <li><a href="">Riesgos a la seguridad de la red</li>
@@ -86,28 +86,25 @@
         </section>
         <!-- Imagen de Covid19 -->
         <section class="crc">
-            <img src="../img/bamnnercrcabril2020.jpg" alt="">
+            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="../img/bamnnercrcabril2020.jpg" loading="lazy" alt=""></a>
         </section>
     </main>
     <footer>    
         <div class="columna columna-50">
             <ul class="menu-footer">
-                <li><a href=""><a href="acercade.html">Acerca de</a></li>
-                <li><a href=""><a href="television.html">Television</a></li>
-                <li><a href=""><a href="combos.html">Combos</a></li>
-                <li><a href=""><a href="#">Proteccion al Usuario</a></li>
-                <li><a href=""><a href="combos.html">Paga tu Factura</a></li>
-                <li><a href=""><a href="">Contactanos</a></li>
+                <li><a href="acercade.html">Acerca de</a></li>
+                <li><a href="television.html">Television</a></li>
+                <li><a href="combos.html">Combos</a></li>
+                <li><a href="#">Proteccion al Usuario</a></li>
+                <li><a href="#">Paga tu Factura</a></li>
+                <li><a href="Contactenos.php">Contactanos</a></li>
             </ul>
         </div>
         <div class="columna columna-50 derecha">
             <ul class="menu-footer">
-                <li><a href=""><a href="">Indicadores</a></li>
-                <li><a href=""><a href="">Resolucion 19012 2020</a></li>
-                 <li><a href=""><a href="">PQR</a></li>
-<!--                <li><a href=""><a href="">Link 1</a></li>
-                <li><a href=""><a href="">Link 1</a></li>
-                <li><a href=""><a href="">Link 1</a></li> -->
+                <li><a href="">Indicadores</a></li>
+                <li><a href="">Resolucion 19012 2020</a></li>
+                 <li><a href="pqr.php">PQR</a></li>
             </ul>
         </div>
         <div class="columna columna-100">
